add copyright to footer

--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
     </section>
 
     <footer class="footer">
-        <span>Copyright © The Odin Project 2021</span>
+        <p>Copyright © The Odin Project, 2021</p>
+        <p>Copyright © Claudia Barrera, 2025</p>
     </footer>
 
 </body>
